文件上传注释

--- a/vblog-java/src/main/resources/application.yml
+++ b/vblog-java/src/main/resources/application.yml
@@ -22,7 +22,7 @@ blackstar:
     header: token
 file:
   common:
-    # windows系统下访问路径
+    # windows系统下访问路径，结尾的/必须要加
     uploadWindow: D://Images/
     # linux系统下访问路径
     uploadLinux: /home/user/
